--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-fileupload-1.3.3.jar=commons-fileupload-1.3.3.jar
 file.reference.commons-io-2.5.jar=commons-io-2.5.jar
+file.reference.commons-net-3.6.jar=commons-net-3.6.jar
 file.reference.gson-2.2.3.jar=gson-2.2.3.jar
 file.reference.imgscalr-lib-4.2.jar=imgscalr-lib-4.2.jar
 file.reference.json-20140107.jar=json-20140107.jar
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.3.jar}:\
     ${file.reference.imgscalr-lib-4.2.jar}:\
     ${file.reference.json-20140107.jar}:\
-    ${file.reference.gson-2.2.3.jar}
+    ${file.reference.gson-2.2.3.jar}:\
+    ${file.reference.commons-net-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
